objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>HB Lead Status</fullName>
        <description>HB lead statuses v2</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Pending Submission</fullName>
        </values>
        <values>
            <fullName>Pre-Discovery</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HomeBuyer Canada</fullName>
        <description>HB lead process for Canada Pilot</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Pending Submission</fullName>
        </values>
        <values>
            <fullName>Pre-Discovery</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New HO Funnel</fullName>
        <description>Homeowner lead process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Received</fullName>
        </values>
        <values>
            <fullName>Application Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Credit Qualified</fullName>
        </values>
        <values>
            <fullName>Documents In</fullName>
        </values>
        <values>
            <fullName>Guideline Qualified</fullName>
        </values>
        <values>
            <fullName>Pending Qualification</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Real Estate Agents</fullName>
        <description>Process for Real Estate Agents we are trying to contact</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted to Contact</fullName>
        </values>
        <values>
            <fullName>Interested in HomeBuyer %28but not Unison Social%29</fullName>
        </values>
        <values>
            <fullName>Not Interested in Unison Social</fullName>
        </values>
        <values>
            <fullName>Quiz Completed</fullName>
        </values>
        <values>
            <fullName>Registered - Active</fullName>
        </values>
        <values>
            <fullName>Registered - Not Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Unable to Contact</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AWS_Lead_Id__c</fullName>
        <description>AWS Lead Identifier As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>AWS Lead Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Active_MLS_Listings__c</fullName>
        <description>Number of listings active in Unison MLS database as of date in MLS Extract
            Date. As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <inlineHelpText>Number of listings active in Unison MLS database as of date in MLS Extract
            Date</inlineHelpText>
        <label>Active MLS Listings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Income_From_Other_Applicants__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Any Additional Income outside the totaled amount calculated for Applicant or
            Co-Applicant As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Additional Income From Other Applicants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adults_Occupying_Property_Dropdown__c</fullName>
        <description>The number of adults that live at the property. Question on current HO
            application: ""Are there any adults occupying the property, including your adult
            children (18+), that are not on title (not listed on the deed to the property)?"" As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Declaration Adults Occupying</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adults_occupying_property_not_on_title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Adults occupying property not on title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name__c</fullName>
        <description>Indicates which affiliate partner provided this lead to Unison</description>
        <formula>IF(
CONTAINS(Campaign_Content__c,'_vb'), "Valley National Bank",
IF(
CONTAINS(Campaign_Content__c,'redfin'), "Redfin",
CASE(Campaign_Name__c,
"PT Money LLC", "PT Money LLC",
"SmartAsset", "SmartAsset",
"SuperMoney, LLC", "SuperMoney, LLC",
"creditsesame-uho", "Credit Sesame",
"The Motley Fool", "The Motley Fool",
"redfin-uho", "Redfin",
null
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates which affiliate partner provided this lead to Unison</inlineHelpText>
        <label>Affiliate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Newest_Activity__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>now() -  Newest_Closed_Task_DateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Newest Activity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Convert__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>ConvertedDate - Datevalue(CreatedDate)+1</formula>
        <label>Age of Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_or_Non_Agency__c</fullName>
        <description>Homebuyer only. Whether the first mortgage will be agency or non-agency. As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Agency or Non-Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_bankruptcies_or_foreclosures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Any bankruptcies or foreclosures?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant1__c</fullName>
        <defaultValue>'applicant1'</defaultValue>
        <description>The Applicant of an Application As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Applicant1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Bankrupcy_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Applicant: "Have you been
            involved in a bankruptcy proceeding within the past 7 years?" As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Birth_Date_Free_Response__c</fullName>
        <description>A free text field that cerocds the applicants birthday. Scheduled for deletion
            following field cutover and backfill coordination with Engineering. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Birth Date (MM/DD/YYYY)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Credit_Score_Estimate__c</fullName>
        <description>2019-10-18 - The output of the question in the only pre-qual form. As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Credit Score Estimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Felony_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Applicant: "Have you ever been
            convicted of or plead guilty to a felony?" As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Felony</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Foreclosure_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Applicant: "Have you ever had a
            property foreclosed upon?" As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Foreclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Full_Name__c</fullName>
        <description>The first name of the applicant. As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <formula>FirstName &amp;" "&amp;LastName</formula>
        <label>Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Signed_Timestamp__c</fullName>
        <description>When the applicant signed. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Applicant Signed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applicant_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer has signed, through an ESignature on our website, or through
            Docusign, the application agreement. The application is received until all
            co-applicatnts have signed. As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Applicant signed the online application.</inlineHelpText>
        <label>Applicant Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Social_Security_Number__c</fullName>
        <description>Social Security of the applicant As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>SSN - Social Security Number (US) SIN - Social Insurance Number
            (Canada)</inlineHelpText>
        <label>SSN / SIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_requires_2_5_Transaction_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <inlineHelpText>If applicant is a direct mail respondent who insists on old pricing
            structure (2.5% transaction fee), check the box.</inlineHelpText>
        <label>Applicant requires 2.5% Transaction Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Deed_of_Foreclosure_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Applicant: Have you ever given
            title or deed in lieu thereof or sold a property in a short sale?" As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Declaration Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Received_Date_Time__c</fullName>
        <description>This field is populated when Lead Status is changed to "Application Received" As of Q4-2019, this field has been identified by Business Systems (and relevant stakeholders) as used or otherwise relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Application Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused, and thus marked for deprecation.</description>
        <label>Application Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Sent_Date_Time__c</fullName>
        <description>This field is populated when Lead Status is changed to "Application Sent" As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Application Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Sent_Date__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Application Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Started_Date_Time__c</fullName>
        <description>This field is populated when the user clicks inside the online application. The
            date/time is recorded and populates this field in Salesforce. As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Application Started Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Tracking_ID__c</fullName>
        <description>There is one application id per application. Unison generates this at lead
            creation. We pushed this data into encompass. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <displayFormat>FRX-{000000}</displayFormat>
        <label>Application Tracking ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Boundary__c</fullName>
        <description>Direct output of Passbook as of v2.0: do not delete or otherwise alter without consent of Richard Fu or Research Team.</description>
        <inlineHelpText>Returns the tuples of acceptable LTV, DTI for Exception, and (if applicable) DTI for Approval.</inlineHelpText>
        <label>Approval Escalation Boundary</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assets_Bank_Acct__c</fullName>
        <description>2019-10-11 In the website flow, we ask the user to state how much value they
            have in a bank account. Depending on the user's answer, we may ask them to upload a
            document. This workflow may change. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Assets Bank Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Brokerage_Acct__c</fullName>
        <description>2019-10-11 In the website flow, we ask the user to state how much value they
            have in a brokerage account. Depending on the user's answer, we may ask them to upload a
            document. This workflow may change. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Assets Brokerage Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other_Real_Estate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The equity dollar value of all of the other real estate holdings, summed
            together, for all applicants. As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Assets Other Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other__c</fullName>
        <description>2019-10-11 - Another type of customer asset. Similar to
            Assets_brokerage_account_c or Assets_bank_acct_c. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Assets Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Retirement_Acct__c</fullName>
        <description>2019-10-11 In the website flow, we ask the user to state how much value they
            have in a retirement account. Depending on the user's answer, we may ask them to upload
            a document. This workflow may change. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Assets Retirement Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Balance__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Personal_Credit_Report__r.LASERCA__AutoBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Autopilot_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Autopilot Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPM2019_1_transaction_fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>BPM2019 1% transaction fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_End_Ratio__c</fullName>
        <description>A computed field. As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <formula>(Payment_Monthly_Total_Housing__c+ Sum_of_Debt_Payments__c)  / (Income_Monthy_Total_Co__c + Income_Monthly_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Payment Monthly Total Housing + Sum of Debt Payments) / Total Monthly
            Income</inlineHelpText>
        <label>Back-End Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankrupcy_in_last_seven_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Bankrupcy in last seven years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bankrupcy_in_last_seven_years_co__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Bankrupcy in last seven years? (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <description>This field is used to generate a banner that is displayed to the program
            specilaist. For example, if a lead comes from Valley Bank, this field will be used to
            populate a banner in SalesForce that tells the program specialist the source of the
            customer. At this time, used exclusively to indicate the source of traffice. As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <formula>CASE( 
Campaign_Media_Type__c , 

"Digital",IMAGE("/servlet/servlet.FileDownload?file=0154400000BotYN", 
"Digital",30,160), 

"Physical Media", "Direct Mail", 

NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Reach__c</fullName>
        <description>The best time to reach the customer.</description>
        <label>Best Time to Reach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Morning (7-9)</fullName>
                </value>
                <value>
                    <fullName>Morning (9-12)</fullName>
                </value>
                <value>
                    <fullName>Early Afternoon (12-3)</fullName>
                </value>
                <value>
                    <fullName>Late Afternoon (3-6)</fullName>
                </value>
                <value>
                    <fullName>Evening (6-9)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bounce_Date_Time__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Bounce Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bounce_Reason__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Bounce Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <description>The id in the URL of the folder in Box that holds all of the documents. As of
            Q4 2019, Box is still actively used. Used for the tracking the Box Folder Id. As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Box FolderID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup of the Lender Branch As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>LO Branch Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lender</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Branch Leads</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branding_Type__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <inlineHelpText>Indicates whether campaign that generated lead was
            co-branded</inlineHelpText>
        <label>Branding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendly_User__c</fullName>
        <description>Used by the Sales team for their Calendly integration. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Calendly User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Owen check with Tutt and SalesLab to get context As of Q4-2019, this field has
            been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Call Scheduled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Audience__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <inlineHelpText>Target audience of marketing campaign that generated lead</inlineHelpText>
        <label>Campaign Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Campaign_Audience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Content__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Media_Type__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <inlineHelpText>Indicates whether campaign that generated lead was digital or
            physical</inlineHelpText>
        <label>Campaign Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Campaign_Media_Type</valueSetName>
        </valueSet>
    </fields>
</CustomObject>